deployment/ironhack-final/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
        - name: expensy-backend
          image: "ivsancheza/expensy_backend:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8706
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-frontend
  template:
    metadata:
      labels:
        app: expensy-frontend
    spec:
      containers:
        - name: expensy-frontend
          image: "ivsancheza/expensy_frontend:latest"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
